--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
+    "egeo.ui.base": "git+https://github.com/Stratio/egeo.ui.base.git",
     "es6-shim": "0.35.1",
+    "ng2-translate": "2.1.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12",
-    "egeo.ui.base": "git+https://github.com/Stratio/egeo.ui.base.git"
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
     "css-loader": "0.23.1",
@@ -30,15 +31,16 @@
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.17.0",
     "jasmine-core": "2.4.1",
+    "json-loader": "0.5.4",
     "karma": "0.13.22",
     "karma-jasmine": "1.0.2",
     "karma-phantomjs-launcher": "1.0.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.7.0",
+    "node-sass": "3.7.0",
     "null-loader": "0.1.1",
     "phantomjs-prebuilt": "2.1.7",
     "raw-loader": "0.5.1",
-    "node-sass": "3.7.0",
     "sass-loader": "3.2.0",
     "style-loader": "0.13.1",
     "ts-loader": "0.8.2",
