--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zone.js": "0.6.12"
   },
   "devDependencies": {
+    "codelyzer": "0.0.19",
     "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
