--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
+    "bootstrap": "^3.3.6",
     "egeo.ui.base": "git+https://github.com/Stratio/egeo.ui.base.git",
     "es6-shim": "0.35.1",
     "ng2-translate": "2.1.0",
