--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
-    "egeo.ui.base": "git+https://github.com/Stratio/egeo.ui.base.git",
+    "egeo.ui.base": "0.1.0-SNAPSHOT",
     "es6-shim": "0.35.1",
     "ng2-translate": "2.1.0",
     "reflect-metadata": "0.1.3",
