--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@angular/http": "2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
-    "egeo.ui.base": "git+https://github.com/Stratio/egeo.ui.base.git",
+    "@angular/router": "2.0.0-rc.1",
+    "egeo.ui.base": "*",
     "es6-shim": "0.35.1",
     "ng2-translate": "2.1.0",
     "reflect-metadata": "0.1.3",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "codelyzer": "0.0.19",
+    "copy-webpack-plugin": "3.0.1",
     "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
