--- a/package.json
+++ b/package.json
@@ -1,62 +1,146 @@
 {
-  "name": "angular2-architecture",
-  "version": "1.0.0",
-  "description": "Architecture proposal for Angular 2.x projects",
-  "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 8080",
-    "test": "karma start",
-    "build": "rm -rf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
-    "postinstall": "typings install",
-    "tslint": "tslint \"./src/**/*.ts\"",
-    "sass-lint": "sass-lint --verbose",
-    "lint": "npm run sass-lint && npm run tslint"
-  },
-  "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
-    "egeo.ui.base": "*",
-    "es6-shim": "0.35.1",
-    "ng2-translate": "2.1.0",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
-  },
-  "devDependencies": {
-    "codelyzer": "0.0.19",
-    "copy-webpack-plugin": "3.0.1",
-    "css-loader": "0.23.1",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.8.5",
-    "html-loader": "0.4.3",
-    "html-webpack-plugin": "2.17.0",
-    "jasmine-core": "2.4.1",
-    "json-loader": "0.5.4",
-    "karma": "0.13.22",
-    "karma-jasmine": "1.0.2",
-    "karma-phantomjs-launcher": "1.0.0",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.7.0",
-    "node-sass": "3.7.0",
-    "null-loader": "0.1.1",
-    "phantomjs-prebuilt": "2.1.7",
-    "raw-loader": "0.5.1",
-    "sass-lint": "1.7.0",
-    "sass-loader": "3.2.0",
-    "sasslint-webpack-plugin": "1.0.3",
-    "style-loader": "0.13.1",
-    "ts-loader": "0.8.2",
-    "tslint": "3.10.2",
-    "tslint-loader": "2.1.4",
-    "typescript": "1.8.10",
-    "typings": "1.0.3",
-    "webpack": "1.13.0",
-    "webpack-dev-server": "1.14.1",
-    "webpack-merge": "0.12.0"
-  }
+   "name": "egeo-starter",
+   "version": "1.0.0",
+   "description": "Egeo Starter kit featuring Angular 2, Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack 2",
+   "keywords": [
+      "angular2",
+      "egeo",
+      "typescript"
+      "webpack"
+   ],
+   "homepage": "https://github.com/Stratio/egeo-starter",
+   "license": "MIT",
+   "scripts": {
+      "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
+      "build:docker": "npm run build:prod && docker build -t egeo-starter:latest .",
+      "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
+      "build": "npm run build:dev",
+      "ci": "npm run lint && npm test && npm run e2e",
+      "clean:dist": "npm run rimraf -- dist",
+      "clean:install": "npm set progress=false && npm install",
+      "clean:start": "npm start",
+      "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
+      "docker": "docker",
+      "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
+      "e2e:live": "npm run e2e -- --elementExplorer",
+      "e2e": "npm run protractor",
+      "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
+      "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
+      "github-deploy": "npm run github-deploy:dev",
+      "lint": "npm run tslint \"src/**/*.ts\"",
+      "postversion": "git push && git push --tags",
+      "prebuild:dev": "npm run clean:dist",
+      "prebuild:prod": "npm run clean:dist",
+      "preclean:install": "npm run clean",
+      "preclean:start": "npm run clean",
+      "pree2e": "npm run webdriver:update -- --standalone",
+      "preversion": "npm test",
+      "protractor": "protractor",
+      "rimraf": "rimraf",
+      "server:dev:hmr": "npm run server:dev -- --inline --hot",
+      "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
+      "server:prod": "http-server dist --cors",
+      "server": "npm run server:dev",
+      "start:hmr": "npm run server:dev:hmr",
+      "start": "npm run server:dev",
+      "test": "karma start",
+      "tslint": "tslint",
+      "typedoc": "typedoc",
+      "version": "npm run build",
+      "watch:dev:hmr": "npm run watch:dev -- --hot",
+      "watch:dev": "npm run build:dev -- --watch",
+      "watch:prod": "npm run build:prod -- --watch",
+      "watch:test": "npm run test -- --auto-watch --no-single-run",
+      "watch": "npm run watch:dev",
+      "webdriver-manager": "webdriver-manager",
+      "webdriver:start": "npm run webdriver-manager start",
+      "webdriver:update": "npm run webdriver-manager update",
+      "webpack-dev-server": "webpack-dev-server",
+      "webpack": "webpack"
+   },
+   "dependencies": {
+      "@angular/common": "2.2.1",
+      "@angular/compiler": "2.2.1",
+      "@angular/core": "2.2.1",
+      "@angular/forms": "2.2.1",
+      "@angular/http": "2.2.1",
+      "@angular/platform-browser": "2.2.1",
+      "@angular/platform-browser-dynamic": "2.2.1",
+      "@angular/platform-server": "2.2.1",
+      "@angular/router": "3.2.1",
+      "@angularclass/conventions-loader": "^1.0.2",
+      "@angularclass/hmr": "~1.2.2",
+      "@angularclass/hmr-loader": "~3.0.2",
+      "assets-webpack-plugin": "^3.4.0",
+      "core-js": "^2.4.1",
+      "http-server": "^0.9.0",
+      "ie-shim": "^0.1.0",
+      "rxjs": "5.0.0-beta.12",
+      "zone.js": "~0.6.26"
+   },
+   "devDependencies": {
+      "@types/hammerjs": "^2.0.33",
+      "@types/jasmine": "^2.2.34",
+      "@types/node": "^6.0.38",
+      "@types/protractor": "^1.5.20",
+      "@types/selenium-webdriver": "2.44.29",
+      "@types/source-map": "^0.1.27",
+      "@types/uglify-js": "^2.0.27",
+      "@types/webpack": "^1.12.34",
+      "angular2-router-loader": "^0.3.4",
+      "angular2-template-loader": "^0.6.0",
+      "awesome-typescript-loader": "^2.2.1",
+      "codelyzer": "~1.0.0-beta.4",
+      "copy-webpack-plugin": "^4.0.0",
+      "css-loader": "^0.26.0",
+      "exports-loader": "^0.6.3",
+      "expose-loader": "^0.7.1",
+      "file-loader": "^0.9.0",
+      "gh-pages": "^0.12.0",
+      "html-webpack-plugin": "^2.21.0",
+      "imports-loader": "^0.6.5",
+      "istanbul-instrumenter-loader": "^1.0.0",
+      "json-loader": "^0.5.4",
+      "karma": "^1.2.0",
+      "karma-chrome-launcher": "^2.0.0",
+      "karma-coverage": "^1.1.1",
+      "karma-jasmine": "^1.0.2",
+      "karma-mocha-reporter": "^2.0.0",
+      "karma-remap-coverage": "^0.1.1",
+      "karma-sourcemap-loader": "^0.3.7",
+      "karma-webpack": "1.8.0",
+      "parse5": "^2.2.2",
+      "protractor": "^4.0.9",
+      "raw-loader": "0.5.1",
+      "rimraf": "~2.5.4",
+      "script-ext-html-webpack-plugin": "^1.3.2",
+      "source-map-loader": "^0.1.5",
+      "string-replace-loader": "1.0.5",
+      "style-loader": "^0.13.1",
+      "to-string-loader": "^1.1.4",
+      "ts-helpers": "1.1.2",
+      "ts-node": "^1.7.0",
+      "tslint": "~4.0.0",
+      "tslint-loader": "^2.1.3",
+      "typedoc": "^0.5.0",
+      "typescript": "^2.0.6",
+      "url-loader": "^0.5.7",
+      "v8-lazy-parse-webpack-plugin": "^0.3.0",
+      "webpack": "2.1.0-beta.27",
+      "webpack-dev-middleware": "^1.6.1",
+      "webpack-dev-server": "2.1.0-beta.11",
+      "webpack-md5-hash": "^0.0.5",
+      "webpack-merge": "~0.17.0"
+   },
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/Stratio/egeo-starter.git"
+   },
+   "bugs": {
+      "url": "https://github.com/Stratio/egeo-starter/issues"
+   },
+   "engines": {
+      "node": ">= 4.2.1",
+      "npm": ">= 3"
+   }
 }
