--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,42 +2,24 @@
    "atom": {
       "rewriteTsconfig": false
    },
-   "awesomeTypescriptLoaderOptions": {
-      "forkChecker": true,
-      "useWebpackText": true
-   },
    "buildOnSave": false,
    "compileOnSave": false,
    "compilerOptions": {
-      "allowSyntheticDefaultImports": true,
       "baseUrl": "./src",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "lib": [
-         "dom",
-         "es6"
-      ],
       "module": "commonjs",
       "moduleResolution": "node",
-      "noEmitHelpers": true,
-      "paths": {
-      },
+      "noImplicitAny": true,
+      "pretty": true,
+      "removeComments": false,
+      "skipLibCheck": true,
       "sourceMap": true,
-      "strictNullChecks": false,
-      "target": "es5",
-      "types": [
-         "hammerjs",
-         "jasmine",
-         "node",
-         "protractor",
-         "selenium-webdriver",
-         "source-map",
-         "uglify-js",
-         "webpack"
-      ]
+      "strictNullChecks": true,
+      "target": "es5"
    },
    "exclude": [
-      "node_modules",
-      "dist"
-   ],
+      "dist",
+      "node_modules"
+   ]
 }
