--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,7 @@
 @angular:registry=https://registry.npmjs.org/
+@angularclass:registry=https://registry.npmjs.org/
 @ngrx:registry=https://registry.npmjs.org/
+@types:registry=https://registry.npmjs.org/
 registry=http://sodio.stratio.com/nexus/content/groups/publicnpm/
 #registry=https://registry.npmjs.org/
+progress=false
