--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
       "test:watch": "cross-env NODE_ENV=test karma start --auto-watch --no-single-run"
    },
    "dependencies": {
-      "@angular/common": "2.4.3",
-      "@angular/compiler": "2.4.3",
-      "@angular/core": "2.4.3",
-      "@angular/forms": "2.4.3",
-      "@angular/http": "2.4.3",
-      "@angular/platform-browser": "2.4.3",
-      "@angular/platform-browser-dynamic": "2.4.3",
-      "@angular/router": "3.4.3",
+      "@angular/common": "2.4.6",
+      "@angular/compiler": "2.4.6",
+      "@angular/core": "2.4.6",
+      "@angular/forms": "2.4.6",
+      "@angular/http": "2.4.6",
+      "@angular/platform-browser": "2.4.6",
+      "@angular/platform-browser-dynamic": "2.4.6",
+      "@angular/router": "3.4.6",
       "core-js": "2.4.1",
-      "egeo": "0.6.0-SNAPSHOT",
+      "egeo": "1.0.0-SNAPSHOT",
+      "egeo-theme": "0.2.0",
+      "egeo-ui-base": "0.4.0",
+      "flexboxgrid": "6.3.1",
       "ng2-translate": "5.0.0",
       "reflect-metadata": "0.1.9",
       "rxjs": "5.0.3",
-      "ui-base": "0.1.0",
-      "ui-fonts": "0.1.0",
       "zone.js": "0.7.6"
    },
    "devDependencies": {
