--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "@types/node": "6.0.52",
       "angular-router-loader": "0.4.0",
       "angular2-template-loader": "0.6.0",
-      "assets-webpack-plugin": "3.5.0",
+      "assets-webpack-plugin": "3.5.1",
       "awesome-typescript-loader": "3.0.0-beta.17",
       "copy-webpack-plugin": "4.0.1",
       "cross-env": "3.1.3",
@@ -48,21 +48,22 @@
       "extract-text-webpack-plugin": "1.0.1",
       "file-loader": "0.9.0",
       "html-loader": "0.4.4",
-      "html-webpack-plugin": "2.24.1",
+      "html-webpack-plugin": "2.28.0",
       "jasmine-core": "2.5.2",
       "json": "9.0.4",
-      "karma": "1.3.0",
+      "karma": "1.4.1",
       "karma-jasmine": "1.0.2",
       "karma-phantomjs-launcher": "1.0.2",
       "karma-sourcemap-loader": "0.3.7",
-      "karma-webpack": "1.8.0",
+      "karma-webpack": "2.0.2",
       "node-sass": "4.0.0",
       "null-loader": "0.1.1",
       "phantomjs-prebuilt": "2.1.13",
       "raw-loader": "0.5.1",
       "rimraf": "2.5.4",
       "sass-loader": "4.0.2",
-      "string-replace-webpack-plugin": "0.0.4",
+      "source-map-loader": "0.1.6",
+      "string-replace-webpack-plugin": "0.0.5",
       "style-loader": "0.13.1",
       "to-string-loader": "1.1.5",
       "ts-helpers": "1.1.2",
@@ -70,10 +71,10 @@
       "tslint-loader": "3.3.0",
       "typescript": "2.1.4",
       "url-loader": "0.5.7",
-      "webpack": "2.2.0-rc.1",
-      "webpack-dev-middleware": "1.9.0",
-      "webpack-dev-server": "2.2.0-rc.0",
+      "webpack": "2.2.1",
+      "webpack-dev-middleware": "1.10.0",
+      "webpack-dev-server": "2.3.0",
       "webpack-md5-hash": "0.0.5",
-      "webpack-merge": "1.1.2"
+      "webpack-merge": "2.6.1"
    }
 }
