update dependencies for egeo rc1

--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
       "test:watch": "cross-env NODE_ENV=test karma start --auto-watch --no-single-run"
    },
    "dependencies": {
-      "@angular/common": "2.4.6",
-      "@angular/compiler": "2.4.6",
-      "@angular/core": "2.4.6",
-      "@angular/forms": "2.4.6",
-      "@angular/http": "2.4.6",
-      "@angular/platform-browser": "2.4.6",
-      "@angular/platform-browser-dynamic": "2.4.6",
-      "@angular/router": "3.4.6",
+      "@angular/common": "2.4.8",
+      "@angular/compiler": "2.4.8",
+      "@angular/core": "2.4.8",
+      "@angular/forms": "2.4.8",
+      "@angular/http": "2.4.8",
+      "@angular/platform-browser": "2.4.8",
+      "@angular/platform-browser-dynamic": "2.4.8",
+      "@angular/router": "3.4.8",
       "core-js": "2.4.1",
-      "egeo": "1.0.0-SNAPSHOT",
-      "egeo-theme": "0.2.0",
+      "egeo": "1.0.0-RC1",
+      "egeo-theme": "0.3.0",
       "egeo-ui-base": "0.4.0",
       "flexboxgrid": "6.3.1",
       "ng2-translate": "5.0.0",
