webpack build less verbose log

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
       "url": "https://github.com/Stratio/egeo-starter.git"
    },
    "scripts": {
-      "build": "cross-env NODE_ENV=production rimraf dist && webpack --progress --profile --bail",
-      "replace": "json -f package.json",
+      "build": "cross-env NODE_ENV=production rimraf dist && webpack --no-color --bail",
+      "replace": "json -I -f package.json -e",
       "start": "cross-env NODE_ENV=development webpack-dev-server --inline --progress",
       "test": "cross-env NODE_ENV=test karma start",
       "test:watch": "cross-env NODE_ENV=test karma start --auto-watch --no-single-run"
