--- a/package.json
+++ b/package.json
@@ -16,27 +16,33 @@
       "test:watch": "cross-env NODE_ENV=test karma start --auto-watch --no-single-run"
    },
    "dependencies": {
-      "@angular/common": "2.4.9",
-      "@angular/compiler": "2.4.9",
-      "@angular/core": "2.4.9",
-      "@angular/forms": "2.4.9",
-      "@angular/http": "2.4.9",
-      "@angular/platform-browser": "2.4.9",
-      "@angular/platform-browser-dynamic": "2.4.9",
-      "@angular/router": "3.4.9",
+      "@angular/common": "4.0.0",
+      "@angular/compiler": "4.0.0",
+      "@angular/core": "4.0.0",
+      "@angular/forms": "4.0.0",
+      "@angular/http": "4.0.0",
+      "@angular/platform-browser": "4.0.0",
+      "@angular/platform-browser-dynamic": "4.0.0",
+      "@angular/router": "4.0.0",
+      "@stratio/egeo": "1.2.0",
+      "@stratio/egeo-theme": "0.4.1",
+      "@stratio/egeo-ui-base": "1.2.0",
       "core-js": "2.4.1",
-      "egeo": "1.0.0",
-      "egeo-theme": "0.3.0",
-      "egeo-ui-base": "0.4.0",
       "flexboxgrid": "6.3.1",
       "ng2-translate": "5.0.0",
       "reflect-metadata": "0.1.9",
       "rxjs": "5.0.3",
-      "zone.js": "0.7.6"
+      "zone.js": "0.7.6",
+
+      "angular2-virtual-scroll": "0.1.3",
+      "lodash": "4.17.4"
    },
    "devDependencies": {
       "@types/core-js": "0.9.35",
       "@types/jasmine": "2.5.38",
+
+      "@types/lodash": "4.14.57",
+
       "@types/node": "6.0.52",
       "angular-router-loader": "0.4.0",
       "angular2-template-loader": "0.6.0",
