--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "removeComments": false,
       "skipLibCheck": true,
       "sourceMap": true,
-      "strictNullChecks": true,
+      "strictNullChecks": false,
       "suppressImplicitAnyIndexErrors": true,
       "target": "es5"
    },
