--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "test:watch": "cross-env NODE_ENV=test karma start --auto-watch --no-single-run"
    },
    "dependencies": {
+      "@angular/animations": "4.0.0",
       "@angular/common": "4.0.0",
       "@angular/compiler": "4.0.0",
       "@angular/core": "4.0.0",
@@ -31,8 +32,8 @@
       "flexboxgrid": "6.3.1",
       "ng2-translate": "5.0.0",
       "reflect-metadata": "0.1.9",
-      "rxjs": "5.0.3",
-      "zone.js": "0.7.6",
+      "rxjs": "5.2.0",
+      "zone.js": "0.8.5",
 
       "angular2-virtual-scroll": "0.1.3",
       "lodash": "4.17.4"
