--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "url": "https://github.com/Stratio/egeo-starter.git"
    },
    "scripts": {
-      "build": "cross-env NODE_ENV=production rimraf dist && webpack --no-color --bail",
+      "build": "rimraf dist && cross-env NODE_ENV=production webpack --no-color --bail",
       "replace": "json -I -f package.json -e",
       "start": "cross-env NODE_ENV=development webpack-dev-server --inline --progress",
       "test": "cross-env NODE_ENV=test karma start",
@@ -19,6 +19,7 @@
       "@angular/animations": "4.0.0",
       "@angular/common": "4.0.0",
       "@angular/compiler": "4.0.0",
+      "@angular/compiler-cli": "4.0.0",
       "@angular/core": "4.0.0",
       "@angular/forms": "4.0.0",
       "@angular/http": "4.0.0",
@@ -34,16 +35,14 @@
       "reflect-metadata": "0.1.9",
       "rxjs": "5.2.0",
       "zone.js": "0.8.5",
-
       "angular2-virtual-scroll": "0.1.3",
       "lodash": "4.17.4"
    },
    "devDependencies": {
+      "@ngtools/webpack": "1.3.0",
       "@types/core-js": "0.9.35",
       "@types/jasmine": "2.5.38",
-
       "@types/lodash": "4.14.57",
-
       "@types/node": "6.0.52",
       "angular-router-loader": "0.4.0",
       "angular2-template-loader": "0.6.0",
