minimum package json

--- a/package.json
+++ b/package.json
@@ -9,78 +9,29 @@
       "url": "https://github.com/Stratio/egeo-starter.git"
    },
    "scripts": {
-      "build": "rimraf dist && cross-env NODE_ENV=production webpack --no-color --bail",
-      "replace": "json -I -f package.json -e",
-      "start": "cross-env NODE_ENV=development webpack-dev-server --inline --progress",
-      "test": "cross-env NODE_ENV=test karma start",
-      "test:watch": "cross-env NODE_ENV=test karma start --auto-watch --no-single-run"
+      "build": "rimraf dist && cross-env NODE_ENV=production webpack -p",
+      "start": "cross-env NODE_ENV=development webpack-dev-server"
    },
    "dependencies": {
-      "@angular/animations": "4.0.0",
-      "@angular/common": "4.0.0",
-      "@angular/compiler": "4.0.0",
-      "@angular/compiler-cli": "4.0.0",
-      "@angular/core": "4.0.0",
-      "@angular/forms": "4.0.0",
-      "@angular/http": "4.0.0",
-      "@angular/platform-browser": "4.0.0",
-      "@angular/platform-browser-dynamic": "4.0.0",
-      "@angular/router": "4.0.0",
-      "@stratio/egeo": "1.2.0",
-      "@stratio/egeo-theme": "0.4.1",
-      "@stratio/egeo-ui-base": "1.2.0",
+      "@angular/common": "4.0.1",
+      "@angular/compiler": "4.0.1",
+      "@angular/core": "4.0.1",
+      "@angular/forms": "4.0.1",
+      "@angular/platform-browser": "4.0.1",
+      "@angular/router": "4.0.1",
       "core-js": "2.4.1",
-      "flexboxgrid": "6.3.1",
-      "ng2-translate": "5.0.0",
-      "reflect-metadata": "0.1.9",
-      "rxjs": "5.2.0",
-      "zone.js": "0.8.5",
-      "angular2-virtual-scroll": "0.1.3",
-      "lodash": "4.17.4"
+      "rxjs": "5.3.0",
+      "zone.js": "0.8.5"
    },
    "devDependencies": {
+      "@angular/compiler-cli": "4.0.1",
+      "@angular/platform-browser-dynamic": "4.0.1",
       "@ngtools/webpack": "1.3.0",
-      "@types/core-js": "0.9.35",
-      "@types/jasmine": "2.5.38",
-      "@types/lodash": "4.14.57",
-      "@types/node": "6.0.52",
-      "angular-router-loader": "0.4.0",
-      "angular2-template-loader": "0.6.0",
-      "assets-webpack-plugin": "3.5.1",
-      "awesome-typescript-loader": "3.0.0-beta.17",
       "copy-webpack-plugin": "4.0.1",
-      "cross-env": "3.1.3",
-      "css-loader": "0.26.1",
-      "extract-text-webpack-plugin": "1.0.1",
-      "file-loader": "0.9.0",
-      "html-loader": "0.4.4",
-      "html-webpack-plugin": "2.28.0",
-      "jasmine-core": "2.5.2",
-      "json": "9.0.4",
-      "karma": "1.4.1",
-      "karma-jasmine": "1.0.2",
-      "karma-phantomjs-launcher": "1.0.2",
-      "karma-sourcemap-loader": "0.3.7",
-      "karma-webpack": "2.0.2",
-      "node-sass": "4.0.0",
-      "null-loader": "0.1.1",
-      "phantomjs-prebuilt": "2.1.13",
-      "raw-loader": "0.5.1",
-      "rimraf": "2.5.4",
-      "sass-loader": "4.0.2",
-      "source-map-loader": "0.1.6",
-      "string-replace-webpack-plugin": "0.0.5",
-      "style-loader": "0.13.1",
-      "to-string-loader": "1.1.5",
-      "ts-helpers": "1.1.2",
-      "tslint": "4.1.1",
-      "tslint-loader": "3.3.0",
-      "typescript": "2.1.4",
-      "url-loader": "0.5.7",
-      "webpack": "2.2.1",
-      "webpack-dev-middleware": "1.10.0",
-      "webpack-dev-server": "2.3.0",
-      "webpack-md5-hash": "0.0.5",
-      "webpack-merge": "2.6.1"
+      "cross-env": "4.0.0",
+      "rimraf": "2.6.1",
+      "typescript": "2.2.2",
+      "webpack": "2.3.3",
+      "webpack-dev-server": "2.4.2"
    }
 }
