--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
       "@ngtools/webpack": "1.3.0",
       "copy-webpack-plugin": "4.0.1",
       "cross-env": "4.0.0",
+      "node-sass": "4.5.2",
+      "raw-loader": "0.5.1",
       "rimraf": "2.6.1",
+      "sass-loader": "6.0.3",
       "typescript": "2.2.2",
       "webpack": "2.3.3",
       "webpack-dev-server": "2.4.2"
