--- a/package.json
+++ b/package.json
@@ -4,35 +4,48 @@
    "license": "Apache-2.0",
    "description": "Egeo Starter kit featuring Angular 2, Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack 2",
    "author": "Stratio",
+
    "repository": {
       "type": "git",
       "url": "https://github.com/Stratio/egeo-starter.git"
    },
+
    "scripts": {
       "build": "rimraf dist && cross-env NODE_ENV=production webpack -p",
       "start": "cross-env NODE_ENV=development webpack-dev-server"
    },
+
    "dependencies": {
       "@angular/common": "4.0.1",
       "@angular/compiler": "4.0.1",
       "@angular/core": "4.0.1",
       "@angular/forms": "4.0.1",
+      "@angular/http": "4.0.1",
       "@angular/platform-browser": "4.0.1",
       "@angular/router": "4.0.1",
+      "@stratio/egeo": "1.3.3",
+      "@stratio/egeo-theme": "0.5.0",
+      "@stratio/egeo-ui-base": "1.3.0",
       "core-js": "2.4.1",
       "rxjs": "5.3.0",
       "zone.js": "0.8.5"
    },
+
    "devDependencies": {
       "@angular/compiler-cli": "4.0.1",
       "@angular/platform-browser-dynamic": "4.0.1",
       "@ngtools/webpack": "1.3.0",
       "copy-webpack-plugin": "4.0.1",
       "cross-env": "4.0.0",
+      "css-loader": "0.28.0",
+      "extract-text-webpack-plugin": "2.1.0",
+      "file-loader": "0.11.1",
+      "html-webpack-plugin": "2.28.0",
       "node-sass": "4.5.2",
       "raw-loader": "0.5.1",
       "rimraf": "2.6.1",
       "sass-loader": "6.0.3",
+      "style-loader": "0.16.1",
       "typescript": "2.2.2",
       "webpack": "2.3.3",
       "webpack-dev-server": "2.4.2"
