--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,9 @@
       "skipLibCheck": true,
       "sourceMap": true,
       "target": "es5"
-   }
+   },
+   "exclude": [
+      "dist",
+      "node_modules"
+   ]
 }
