--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
    },
 
    "scripts": {
-      "build": "rimraf dist && cross-env NODE_ENV=production webpack -p",
-      "start": "cross-env NODE_ENV=development webpack-dev-server"
+      "build": "rimraf dist && cross-env NODE_ENV=production webpack -p --progress",
+      "start": "cross-env NODE_ENV=development webpack-dev-server",
+      "test": "cross-env NODE_ENV=test karma start"
    },
 
    "dependencies": {
@@ -37,13 +38,21 @@
       "@angular/compiler-cli": "4.0.2",
       "@angular/platform-browser-dynamic": "4.0.2",
       "@ngtools/webpack": "1.3.0",
+      "@types/jasmine": "2.5.47",
       "copy-webpack-plugin": "4.0.1",
       "cross-env": "4.0.0",
       "css-loader": "0.28.0",
       "extract-text-webpack-plugin": "2.1.0",
       "file-loader": "0.11.1",
       "html-webpack-plugin": "2.28.0",
+      "jasmine-core": "2.5.2",
+      "karma": "1.6.0",
+      "karma-jasmine": "1.1.0",
+      "karma-phantomjs-launcher": "1.0.4",
+      "karma-typescript": "3.0.1",
+      "karma-typescript-angular2-transform": "1.0.0",
       "node-sass": "4.5.2",
+      "phantomjs-polyfill": "0.0.2",
       "raw-loader": "0.5.1",
       "rimraf": "2.6.1",
       "sass-loader": "6.0.3",
