--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
 {
-  "name": "egeo-starter",
-  "version": "0.1.0-SNAPSHOT",
-  "license": "Apache-2.0",
-  "description": "Egeo Starter kit featuring Angular 2, Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack 2",
-  "author": "Stratio",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Stratio/egeo-starter.git"
-  },
-  "scripts": {
-    "build": "rimraf dist && cross-env NODE_ENV=production webpack -p --progress",
-    "start": "cross-env NODE_ENV=development webpack-dev-server",
-    "test": "cross-env NODE_ENV=test karma start"
-  },
-  "dependencies": {
-    "@angular/common": "4.1.1",
-    "@angular/compiler": "4.1.1",
-    "@angular/core": "4.1.1",
-    "@angular/forms": "4.1.1",
-    "@angular/http": "4.1.1",
-    "@angular/platform-browser": "4.1.1",
-    "@angular/router": "4.1.1",
-    "@ngx-translate/core": "6.0.1",
-    "@ngx-translate/http-loader": "0.0.3",
-    "@stratio/egeo": "2.0.2",
-    "@stratio/egeo-theme": "0.8.1",
-    "@stratio/egeo-ui-base": "1.3.0",
-    "core-js": "2.4.1",
-    "rxjs": "5.3.0",
-    "zone.js": "0.8.5"
-  },
-  "devDependencies": {
-    "@angular/compiler-cli": "4.1.1",
-    "@angular/platform-browser-dynamic": "4.1.1",
-    "@ngtools/webpack": "1.3.0",
-    "@types/jasmine": "2.5.47",
-    "copy-webpack-plugin": "4.0.1",
-    "cross-env": "4.0.0",
-    "css-loader": "0.28.0",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "0.11.1",
-    "html-webpack-plugin": "2.28.0",
-    "jasmine-core": "2.5.2",
-    "karma": "1.6.0",
-    "karma-jasmine": "1.1.0",
-    "karma-phantomjs-launcher": "1.0.4",
-    "karma-typescript": "3.0.1",
-    "karma-typescript-angular2-transform": "1.0.0",
-    "node-sass": "4.5.2",
-    "phantomjs-polyfill": "0.0.2",
-    "raw-loader": "0.5.1",
-    "rimraf": "2.6.1",
-    "sass-loader": "6.0.3",
-    "style-loader": "0.16.1",
-    "typescript": "2.2.2",
-    "webpack": "2.4.1",
-    "webpack-dev-server": "2.4.2"
-  }
+   "name": "egeo-starter",
+   "version": "",
+   "license": "Apache-2.0",
+   "description": "Egeo Starter kit featuring Angular 2, Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack 2",
+   "author": "Stratio",
+
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/Stratio/egeo-starter.git"
+   },
+
+   "scripts": {
+      "build": "rimraf dist && cross-env NODE_ENV=production webpack -p --progress",
+      "start": "cross-env NODE_ENV=development webpack-dev-server",
+      "test": "cross-env NODE_ENV=test karma start"
+   },
+
+   "dependencies": {
+      "@angular/common": "4.1.1",
+      "@angular/compiler": "4.1.1",
+      "@angular/core": "4.1.1",
+      "@angular/forms": "4.1.1",
+      "@angular/http": "4.1.1",
+      "@angular/platform-browser": "4.1.1",
+      "@angular/router": "4.1.1",
+      "@ngx-translate/core": "6.0.1",
+      "@ngx-translate/http-loader": "0.0.3",
+      "@stratio/egeo": "2.0.2",
+      "@stratio/egeo-theme": "0.8.1",
+      "@stratio/egeo-ui-base": "1.3.0",
+      "core-js": "2.4.1",
+      "rxjs": "5.3.0",
+      "zone.js": "0.8.5"
+   },
+
+   "devDependencies": {
+      "@angular/compiler-cli": "4.1.1",
+      "@angular/platform-browser-dynamic": "4.1.1",
+      "@ngtools/webpack": "1.3.0",
+      "@types/jasmine": "2.5.47",
+      "copy-webpack-plugin": "4.0.1",
+      "cross-env": "4.0.0",
+      "css-loader": "0.28.0",
+      "extract-text-webpack-plugin": "2.1.0",
+      "file-loader": "0.11.1",
+      "html-webpack-plugin": "2.28.0",
+      "jasmine-core": "2.5.2",
+      "karma": "1.6.0",
+      "karma-jasmine": "1.1.0",
+      "karma-phantomjs-launcher": "1.0.4",
+      "karma-typescript": "3.0.1",
+      "karma-typescript-angular2-transform": "1.0.0",
+      "node-sass": "4.5.2",
+      "phantomjs-polyfill": "0.0.2",
+      "raw-loader": "0.5.1",
+      "rimraf": "2.6.1",
+      "sass-loader": "6.0.3",
+      "style-loader": "0.16.1",
+      "typescript": "2.2.2",
+      "webpack": "2.4.1",
+      "webpack-dev-server": "2.4.2"
+   }
 }
