--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
    "scripts": {
       "build": "rimraf dist && cross-env NODE_ENV=production webpack -p --progress",
       "start": "cross-env NODE_ENV=development webpack-dev-server",
+      "start:dev:hmr": "npm run start -- --hot --inline",
+      "start:aot": "cross-env NODE_ENV=production webpack-dev-server",
       "test": "cross-env NODE_ENV=test karma start"
    },
 
@@ -24,6 +26,8 @@
       "@angular/http": "4.1.1",
       "@angular/platform-browser": "4.1.1",
       "@angular/router": "4.1.1",
+      "@angularclass/hmr": "1.2.2",
+      "@angularclass/hmr-loader": "3.0.2",
       "@ngx-translate/core": "6.0.1",
       "@ngx-translate/http-loader": "0.0.3",
       "@stratio/egeo": "2.0.2",
@@ -37,8 +41,11 @@
    "devDependencies": {
       "@angular/compiler-cli": "4.1.1",
       "@angular/platform-browser-dynamic": "4.1.1",
-      "@ngtools/webpack": "1.3.0",
+      "@ngtools/webpack": "1.4.1",
       "@types/jasmine": "2.5.47",
+      "@types/node": "7.0.22",
+      "angular2-template-loader": "0.6.2",
+      "awesome-typescript-loader": "3.1.3",
       "copy-webpack-plugin": "4.0.1",
       "cross-env": "4.0.0",
       "css-loader": "0.28.0",
@@ -51,6 +58,7 @@
       "karma-phantomjs-launcher": "1.0.4",
       "karma-typescript": "3.0.1",
       "karma-typescript-angular2-transform": "1.0.0",
+      "ng-router-loader": "2.1.0",
       "node-sass": "4.5.2",
       "phantomjs-polyfill": "0.0.2",
       "raw-loader": "0.5.1",
