--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -27,6 +27,15 @@ http {
   keepalive_timeout   65;
   types_hash_max_size 2048;
 
+  gzip on;
+  gzip_http_version 1.1;
+  gzip_vary on;
+  gzip_comp_level 6;
+  gzip_proxied any;
+  gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript text/x-js;
+  gzip_buffers 16 8k;
+  gzip_disable "MSIE [1-6].(?!.*SV1)";
+
   include /etc/nginx/mime.types;
   default_type        application/octet-stream;
 
