--- a/package.json
+++ b/package.json
@@ -1,72 +1,66 @@
 {
-   "name": "egeo-starter",
-   "version": "",
+   "name": "@stratio/egeo-starter",
+   "version": "0.0.0",
    "license": "Apache-2.0",
-   "description": "Egeo Starter kit featuring Angular 2, Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack 2",
-   "author": "Stratio",
-
+   "scripts": {
+      "ng": "ng",
+      "start": "ng serve",
+      "build": "ng build --prod --progress=false",
+      "test": "ng test --sourcemap=false --watch=false",
+      "lint": "ng lint --type-check",
+      "e2e": "ng e2e",
+      "commit": "git-cz"
+   },
    "repository": {
       "type": "git",
       "url": "https://github.com/Stratio/egeo-starter.git"
    },
-
-   "scripts": {
-      "build": "rimraf dist && cross-env NODE_ENV=production webpack -p --progress",
-      "start": "cross-env NODE_ENV=development webpack-dev-server",
-      "start:dev:hmr": "npm run start -- --hot --inline",
-      "start:aot": "cross-env NODE_ENV=production webpack-dev-server",
-      "test": "cross-env NODE_ENV=test karma start"
-   },
-
    "dependencies": {
-      "@angular/common": "4.1.1",
-      "@angular/compiler": "4.1.1",
-      "@angular/core": "4.1.1",
-      "@angular/forms": "4.1.1",
-      "@angular/http": "4.1.1",
-      "@angular/platform-browser": "4.1.1",
-      "@angular/router": "4.1.1",
-      "@angularclass/hmr": "1.2.2",
-      "@angularclass/hmr-loader": "3.0.2",
+      "@angular/animations": "4.3.3",
+      "@angular/common": "4.3.3",
+      "@angular/compiler": "4.3.3",
+      "@angular/core": "4.3.3",
+      "@angular/forms": "4.3.3",
+      "@angular/http": "4.3.3",
+      "@angular/platform-browser": "4.3.3",
+      "@angular/platform-browser-dynamic": "4.3.3",
+      "@angular/router": "4.3.3",
       "@ngx-translate/core": "6.0.1",
       "@ngx-translate/http-loader": "0.0.3",
-      "@stratio/egeo": "2.0.2",
-      "@stratio/egeo-theme": "0.8.1",
-      "@stratio/egeo-ui-base": "1.3.0",
+      "@stratio/egeo": "2.5.0",
+      "@stratio/egeo-theme": "0.13.0",
       "core-js": "2.4.1",
-      "rxjs": "5.3.0",
-      "zone.js": "0.8.5"
+      "intl": "1.2.5",
+      "rxjs": "5.4.2",
+      "zone.js": "0.8.16"
    },
-
    "devDependencies": {
-      "@angular/compiler-cli": "4.1.1",
-      "@angular/platform-browser-dynamic": "4.1.1",
-      "@ngtools/webpack": "1.4.1",
-      "@types/jasmine": "2.5.47",
-      "@types/node": "7.0.22",
-      "angular2-template-loader": "0.6.2",
-      "awesome-typescript-loader": "3.1.3",
-      "copy-webpack-plugin": "4.0.1",
-      "cross-env": "4.0.0",
-      "css-loader": "0.28.0",
-      "extract-text-webpack-plugin": "2.1.0",
-      "file-loader": "0.11.1",
-      "html-webpack-plugin": "2.28.0",
-      "jasmine-core": "2.5.2",
-      "karma": "1.6.0",
+      "@angular/cli": "1.2.7",
+      "@angular/compiler-cli": "4.3.3",
+      "@angular/language-service": "4.3.3",
+      "@types/jasmine": "2.5.53",
+      "@types/jasminewd2": "2.0.2",
+      "@types/node": "6.0.60",
+      "@stratio/egeo-ui-base": "1.4.1",
+      "codelyzer": "3.0.1",
+      "commitizen": "2.9.6",
+      "cz-conventional-changelog": "2.0.0",
+      "jasmine-core": "2.6.2",
+      "jasmine-spec-reporter": "4.1.1",
+      "karma": "1.7.0",
+      "karma-cli": "1.0.1",
+      "karma-coverage-istanbul-reporter": "1.3.0",
       "karma-jasmine": "1.1.0",
       "karma-phantomjs-launcher": "1.0.4",
-      "karma-typescript": "3.0.1",
-      "karma-typescript-angular2-transform": "1.0.0",
-      "ng-router-loader": "2.1.0",
-      "node-sass": "4.5.2",
-      "phantomjs-polyfill": "0.0.2",
-      "raw-loader": "0.5.1",
-      "rimraf": "2.6.1",
-      "sass-loader": "6.0.3",
-      "style-loader": "0.16.1",
-      "typescript": "2.2.2",
-      "webpack": "2.4.1",
-      "webpack-dev-server": "2.4.2"
+      "karma-jasmine-html-reporter": "0.2.2",
+      "protractor": "5.1.2",
+      "ts-node": "3.0.4",
+      "tslint": "5.3.2",
+      "typescript": "2.3.3"
+   },
+   "config": {
+      "commitizen": {
+         "path": "./node_modules/cz-conventional-changelog"
+      }
    }
 }
