--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,23 @@
 {
-   "angularCompilerOptions": {
-      "genDir": "./dist/aot"
-   },
-   "buildOnSave": false,
    "compileOnSave": false,
    "compilerOptions": {
-      "baseUrl": "./src",
+      "outDir": "./dist/out-tsc",
+      "sourceMap": true,
+      "declaration": false,
+      "moduleResolution": "node",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "lib": [ "es2015", "dom" ],
-      "mapRoot": "",
-      "module": "es2015",
-      "moduleResolution": "node",
-      "noImplicitAny": true,
-      "outDir": "dist",
-      "paths": {
-         "@app/*": [ "app/modules/*" ]
-      },
-      "rootDir": ".",
-      "skipLibCheck": true,
-      "sourceMap": true,
       "target": "es5",
-      "types": [ "jasmine", "node" ]
-   },
-   "exclude": [ "dist", "node_modules" ]
+      "baseUrl": "./src",
+      "paths": {
+         "@app/*": ["app/modules/*"]
+      },
+      "typeRoots": [
+         "node_modules/@types"
+      ],
+      "lib": [
+         "es2016",
+         "dom"
+      ]
+   }
 }
