docs: update license
Closes #CCT-68

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
          <plugin>
             <groupId>com.mycila</groupId>
             <artifactId>license-maven-plugin</artifactId>
+            <configuration>
+               <header>${license.header}</header>
+               <includes>
+                  <include>*.js</include>
+              </includes>
+            </configuration>
          </plugin>
       </plugins>
    </build>
